--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "unplugin-vue-components": "^0.27.3",
     "vant": "^4.9.4",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
