--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "Build": "webpack"
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
@@ -22,6 +23,17 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
-    "vite": "^5.2.0"
+    "@vue/compiler-sfc": "^3.5.8",
+    "babel-loader": "^9.2.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "url-loader": "^4.1.1",
+    "vite": "^5.2.0",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
