--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "less": "^4.2.0",
     "unplugin-auto-import": "^0.18.3",
     "url-loader": "^4.1.1",
     "vite": "^5.2.0",
