--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vant": "^4.9.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
